# structured-log-alerting

./: .gitignore  README.md  example_log.csv  pyproject.toml  sample_output.txt
structured_log_alerting/: __main__.py  alertmanager.py  main.py  metricscollection.py  parser.py  sortedordereddict.py  timeseries.py
tests/: conftest.py  test_alertmanager.py  test_metricscollection.py  test_parser.py  test_sortedordereddict.py  test_timeseries.py
